# MatchDay-Bot

./: .gitignore  data.py  findLineup.py  main.py  passenger_wsgi.py  pyproject.toml  requirements.txt  scheduler.py
